@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2016-12-19 mmichaud <m.michael.michaud@orange.fr>
+  * fix #440 about shift-selection problem between layerView and attributePanel
+
 2016-12-17 ede
   * upgrade commons-lang to version 3.5
 
